--- a/App/Frontend/Templates/sideNav/sideNavMainPart.html
+++ b/App/Frontend/Templates/sideNav/sideNavMainPart.html
@@ -37,6 +37,15 @@
     </a>
 </li>
 
+<li>
+    <a id="scenarios" href="/activapi.fr/scenarios" class="waves-effect waves-pink waves-ripple">
+        <div class="valign-wrapper row">
+            <i class="valign col s2 material-icons ">play_arrow</i>
+            <div class="valign col s10 flow-text">Scénarios</div>
+        </div>
+    </a>
+</li>
+
 <li class="divider"></li>
 
 <li><a class="subheader">Mesures</a></li>
